@@ -8,8 +8,8 @@ os-search-azure is a [Spring Boot](https://spring.io/projects/spring-boot) servi
 
 In order to run this service locally, you will need the following:
 
-- [Maven 3.6.0+](https://maven.apache.org/download.cgi)
-- [AdoptOpenJDK8](https://adoptopenjdk.net/)
+- [Maven 3.8.0+](https://maven.apache.org/download.cgi)
+- [Java 17](https://adoptopenjdk.net/)
 - Infrastructure dependencies, deployable through the relevant [infrastructure template](https://community.opengroup.org/osdu/platform/deployment-and-operations/infra-azure-provisioning/-/blob/master/docs/service-automation.md)
 - While not a strict dependency, example commands in this document use [bash](https://www.gnu.org/software/bash/)
 
@@ -87,9 +87,9 @@ az keyvault secret show --vault-name $KEY_VAULT_NAME --name $KEY_VAULT_SECRET_NA
 Check that maven is installed:
 ```bash
 $ mvn --version
-Apache Maven 3.6.0
+Apache Maven 3.8.0
 Maven home: /usr/share/maven
-Java version: 1.8.0_212, vendor: AdoptOpenJDK, runtime: /usr/lib/jvm/jdk8u212-b04/jre
+Java version: 17.0.7
 ...
 ```
 
@@ -109,7 +109,7 @@ $ (cd provider/search-azure/ && mvn clean package)
 #
 # Note: this assumes that the environment variables for running the service as outlined
 #       above are already exported in your environment.
-$ java -jar $(find provider/search-azure/target/ -name *-spring-boot.jar)
+$ java -jar $(find provider/search-azure/target/ -name *-spring-boot.jar) --add-opens java.base/java.lang=ALL-UNNAMED --add-opens  java.base/java.lang.reflect=ALL-UNNAMED
 
 # Alternately you can run using the Mavan Task
 $ mvn spring-boot:run
